restart doing user-service